# dg_pytorch

./: CMakeLists.txt  package.xml  readme.md
demo/: CMakeLists.txt  entity_pd.py  pd.cpp  pd.py
include/dg_pytorch/: dg_pytorch.hpp
src/: CMakeLists.txt  dg_pytorch.cpp
srcpy/: dg_pytorch_entities_dg_python_module.hpp
