<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

    <name>dg_pytorch</name>
    <version>1.0.0</version>

    <description>
        Dynamic-graph wrapper to run pytorch modules.
    </description>

    <maintainer email="jviereck@tuebingen.mpg.de">Julian Viereck</maintainer>

    <license>BSD-3-clause</license>

    <!-- Build tools -->
    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>mpi_cmake_modules</buildtool_depend>

    <!-- Dependencies -->
    <depend>dynamic-graph</depend>
    <depend>dynamic-graph-python</depend>
    <depend>real_time_tools</depend>
    <depend>Eigen3</depend>
    <depend>Torch</depend>

    <!-- Unit tests -->
    <test_depend>ament_cmake_gtest</test_depend>
    <test_depend>ament_cmake_nose</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>